milestone2_copy/source symboltable/y.output
Nonterminals useless in grammar

   Z
   M5
   assignment_expression_opt
   expression_opt
   parameter_type_list_opt


Rules useless in grammar

  276 Z: %empty


State 26 conflicts: 1 shift/reduce
State 459 conflicts: 1 reduce/reduce


Grammar

    0 $accept: base $end

    1 N: %empty

    2 M1: %empty

    3 primary_expression: IDENTIFIER
    4                   | constant
    5                   | string
    6                   | '(' expression ')'
    7                   | generic_selection

    8 constant: I_CONSTANT
    9         | F_CONSTANT

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 hack: IDENTIFIER
  106     | constant

  107 init_declarator: declarator '=' hack
  108                | declarator

  109 storage_class_specifier: TYPEDEF
  110                        | EXTERN
  111                        | STATIC
  112                        | THREAD_LOCAL
  113                        | AUTO
  114                        | REGISTER

  115 type_specifier: VOID
  116               | CHAR
  117               | SHORT
  118               | INT
  119               | LONG
  120               | FLOAT
  121               | DOUBLE
  122               | SIGNED
  123               | UNSIGNED
  124               | BOOL
  125               | COMPLEX
  126               | IMAGINARY
  127               | atomic_type_specifier
  128               | struct_or_union_specifier
  129               | TYPEDEF_NAME

  130 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  132                          | struct_or_union IDENTIFIER

  133 struct_or_union: STRUCT
  134                | UNION

  135 struct_declaration_list: struct_declaration
  136                        | struct_declaration_list struct_declaration

  137 struct_declaration: specifier_qualifier_list ';'
  138                   | specifier_qualifier_list struct_declarator_list ';'
  139                   | static_assert_declaration

  140 specifier_qualifier_list: type_specifier specifier_qualifier_list
  141                         | type_specifier
  142                         | type_qualifier specifier_qualifier_list
  143                         | type_qualifier

  144 struct_declarator_list: struct_declarator
  145                       | struct_declarator_list ',' struct_declarator

  146 struct_declarator: ':' constant_expression
  147                  | declarator ':' constant_expression
  148                  | declarator

  149 atomic_type_specifier: ATOMIC '(' type_name ')'

  150 type_qualifier: CONST
  151               | RESTRICT
  152               | VOLATILE
  153               | ATOMIC

  154 function_specifier: INLINE
  155                   | NORETURN

  156 alignment_specifier: ALIGNAS '(' type_name ')'
  157                    | ALIGNAS '(' constant_expression ')'

  158 declarator: pointer direct_declarator
  159           | direct_declarator

  160 direct_declarator: IDENTIFIER
  161                  | '(' declarator ')'
  162                  | direct_declarator '[' ']'
  163                  | direct_declarator '[' '*' ']'
  164                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  165                  | direct_declarator '[' STATIC assignment_expression ']'
  166                  | direct_declarator '[' type_qualifier_list '*' ']'
  167                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  168                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  169                  | direct_declarator '[' type_qualifier_list ']'
  170                  | direct_declarator '[' assignment_expression ']'
  171                  | direct_declarator '(' parameter_type_list ')'
  172                  | direct_declarator '(' ')'
  173                  | direct_declarator '(' identifier_list ')'

  174 pointer: '*' type_qualifier_list pointer
  175        | '*' type_qualifier_list
  176        | '*' pointer
  177        | '*'

  178 type_qualifier_list: type_qualifier
  179                    | type_qualifier_list type_qualifier

  180 parameter_type_list: parameter_list ',' ELLIPSIS
  181                    | parameter_list

  182 parameter_list: parameter_declaration
  183               | parameter_list ',' parameter_declaration

  184 parameter_declaration: declaration_specifiers declarator
  185                      | declaration_specifiers abstract_declarator
  186                      | declaration_specifiers

  187 identifier_list: IDENTIFIER
  188                | identifier_list ',' IDENTIFIER

  189 type_name: specifier_qualifier_list abstract_declarator
  190          | specifier_qualifier_list

  191 abstract_declarator: pointer direct_abstract_declarator
  192                    | pointer
  193                    | direct_abstract_declarator

  194 direct_abstract_declarator: '(' abstract_declarator ')'
  195                           | '[' ']'
  196                           | '[' '*' ']'
  197                           | '[' STATIC type_qualifier_list assignment_expression ']'
  198                           | '[' STATIC assignment_expression ']'
  199                           | '[' type_qualifier_list STATIC assignment_expression ']'
  200                           | '[' type_qualifier_list assignment_expression ']'
  201                           | '[' type_qualifier_list ']'
  202                           | '[' assignment_expression ']'
  203                           | direct_abstract_declarator '[' ']'
  204                           | direct_abstract_declarator '[' '*' ']'
  205                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  206                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  207                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  208                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  209                           | direct_abstract_declarator '[' type_qualifier_list ']'
  210                           | direct_abstract_declarator '[' assignment_expression ']'
  211                           | '(' ')'
  212                           | '(' parameter_type_list ')'
  213                           | direct_abstract_declarator '(' ')'
  214                           | direct_abstract_declarator '(' parameter_type_list ')'

  215 initializer: '{' initializer_list '}'
  216            | '{' initializer_list ',' '}'
  217            | assignment_expression

  218 initializer_list: designation initializer
  219                 | initializer
  220                 | initializer_list ',' designation initializer
  221                 | initializer_list ',' initializer

  222 designation: designator_list '='

  223 designator_list: designator
  224                | designator_list designator

  225 designator: '[' constant_expression ']'
  226           | '.' IDENTIFIER

  227 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  228 statement: labeled_statement
  229          | compound_statement
  230          | expression_statement
  231          | selection_statement
  232          | iteration_statement
  233          | jump_statement

  234 labeled_statement: IDENTIFIER ':' statement
  235                  | CASE constant_expression ':' statement
  236                  | DEFAULT ':' statement

  237 M: %empty

  238 compound_statement: '{' '}'

  239 $@1: %empty

  240 compound_statement: '{' $@1 M block_item_list '}'

  241 block_item_list: block_item
  242                | block_item_list M1 block_item

  243 block_item: declaration
  244           | statement

  245 expression_statement: ';'
  246                     | expression ';'

  247 if: IF

  248 else: ELSE

  249 $@2: %empty

  250 selection_statement: if '(' expression ')' M1 statement N $@2 else M1 statement
  251                    | if '(' expression ')' M1 statement
  252                    | SWITCH '(' expression ')' statement

  253 P: %empty

  254 $@3: %empty

  255 iteration_statement: WHILE $@3 M '(' expression ')' statement

  256 $@4: %empty

  257 iteration_statement: DO $@4 M statement WHILE '(' expression ')' ';'
  258                    | FOR P '(' expression_statement expression_statement ')' statement
  259                    | FOR P '(' expression_statement expression_statement expression ')' statement
  260                    | FOR P '(' declaration expression_statement ')' statement
  261                    | FOR P '(' declaration expression_statement expression ')' statement

  262 jump_statement: GOTO IDENTIFIER ';'
  263               | CONTINUE ';'
  264               | BREAK ';'
  265               | RETURN ';'
  266               | RETURN expression ';'

  267 base: translation_unit

  268 translation_unit: external_declaration
  269                 | translation_unit external_declaration

  270 external_declaration: function_definition compound_statement
  271                     | declaration

  272 function_definition: declaration_specifiers declarator declaration_list
  273                    | declaration_specifiers declarator

  274 declaration_list: declaration
  275                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'%' (37) 47
'&' (38) 36 63
'(' (40) 6 12 19 20 25 26 34 35 43 149 156 157 161 171 172 173 194
    211 212 213 214 227 250 251 252 255 257 258 259 260 261
')' (41) 6 12 19 20 25 26 34 35 43 149 156 157 161 171 172 173 194
    211 212 213 214 227 250 251 252 255 257 258 259 260 261
'*' (42) 37 45 163 166 174 175 176 177 196 204
'+' (43) 38 49
',' (44) 12 14 26 28 88 104 145 180 183 188 216 220 221 227
'-' (45) 39 50
'.' (46) 21 226
'/' (47) 46
':' (58) 15 16 73 146 147 234 235 236
';' (59) 90 91 137 138 227 245 246 257 262 263 264 265 266
'<' (60) 55
'=' (61) 76 107 222
'>' (62) 56
'?' (63) 73
'[' (91) 18 162 163 164 165 166 167 168 169 170 195 196 197 198 199
    200 201 202 203 204 205 206 207 208 209 210 225
']' (93) 18 162 163 164 165 166 167 168 169 170 195 196 197 198 199
    200 201 202 203 204 205 206 207 208 209 210 225
'^' (94) 65
'{' (123) 25 26 130 131 215 216 238 240
'|' (124) 67
'}' (125) 25 26 130 131 215 216 238 240
'~' (126) 40
error (256)
IDENTIFIER (258) 3 21 22 105 131 132 160 187 188 226 234 262
STRING_LITERAL (259) 10 227
TYPEDEF_NAME (260) 129
I_CONSTANT (261) 8
F_CONSTANT (262) 9
SIZEOF (263) 33 34
FUNC_NAME (264) 11
PTR_OP (265) 22
INC_OP (266) 23 30
DEC_OP (267) 24 31
LEFT_OP (268) 52
RIGHT_OP (269) 53
LE_OP (270) 57
GE_OP (271) 58
EQ_OP (272) 60
NE_OP (273) 61
AND_OP (274) 69
OR_OP (275) 71
MUL_ASSIGN (276) 77
DIV_ASSIGN (277) 78
MOD_ASSIGN (278) 79
ADD_ASSIGN (279) 80
SUB_ASSIGN (280) 81
LEFT_ASSIGN (281) 82
RIGHT_ASSIGN (282) 83
AND_ASSIGN (283) 84
XOR_ASSIGN (284) 85
OR_ASSIGN (285) 86
TYPEDEF (286) 109
EXTERN (287) 110
STATIC (288) 111 164 165 167 197 198 199 205 206 208
AUTO (289) 113
REGISTER (290) 114
INLINE (291) 154
CONST (292) 150
RESTRICT (293) 151
VOLATILE (294) 152
BOOL (295) 124
CHAR (296) 116
SHORT (297) 117
INT (298) 118
LONG (299) 119
SIGNED (300) 122
UNSIGNED (301) 123
FLOAT (302) 120
DOUBLE (303) 121
VOID (304) 115
COMPLEX (305) 125
IMAGINARY (306) 126
STRUCT (307) 133
UNION (308) 134
ELLIPSIS (309) 180
CASE (310) 235
DEFAULT (311) 16 236
IF (312) 247
ELSE (313) 248
SWITCH (314) 252
WHILE (315) 255 257
DO (316) 257
FOR (317) 258 259 260 261
GOTO (318) 262
CONTINUE (319) 263
BREAK (320) 264
RETURN (321) 265 266
ALIGNAS (322) 156 157
ALIGNOF (323) 35
ATOMIC (324) 149 153
GENERIC (325) 12
NORETURN (326) 155
STATIC_ASSERT (327) 227
THREAD_LOCAL (328) 112


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
N (99)
    on left: 1, on right: 250
M1 (100)
    on left: 2, on right: 242 250 251
primary_expression (101)
    on left: 3 4 5 6 7, on right: 17
constant (102)
    on left: 8 9, on right: 4 106
string (103)
    on left: 10 11, on right: 5
generic_selection (104)
    on left: 12, on right: 7
generic_assoc_list (105)
    on left: 13 14, on right: 12 14
generic_association (106)
    on left: 15 16, on right: 13 14
postfix_expression (107)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 18 19 20 21 22
    23 24 29
argument_expression_list (108)
    on left: 27 28, on right: 20 28
unary_expression (109)
    on left: 29 30 31 32 33 34 35, on right: 30 31 33 42 75
unary_operator (110)
    on left: 36 37 38 39 40 41, on right: 32
cast_expression (111)
    on left: 42 43, on right: 32 43 44 45 46 47
multiplicative_expression (112)
    on left: 44 45 46 47, on right: 45 46 47 48 49 50
additive_expression (113)
    on left: 48 49 50, on right: 49 50 51 52 53
shift_expression (114)
    on left: 51 52 53, on right: 52 53 54 55 56 57 58
relational_expression (115)
    on left: 54 55 56 57 58, on right: 55 56 57 58 59 60 61
equality_expression (116)
    on left: 59 60 61, on right: 60 61 62 63
and_expression (117)
    on left: 62 63, on right: 63 64 65
exclusive_or_expression (118)
    on left: 64 65, on right: 65 66 67
inclusive_or_expression (119)
    on left: 66 67, on right: 67 68 69
logical_and_expression (120)
    on left: 68 69, on right: 69 70 71
logical_or_expression (121)
    on left: 70 71, on right: 71 72 73
conditional_expression (122)
    on left: 72 73, on right: 73 74 89
assignment_expression (123)
    on left: 74 75, on right: 12 15 16 27 28 75 87 88 164 165 167 168
    170 197 198 199 200 202 205 206 207 208 210 217
assignment_operator (124)
    on left: 76 77 78 79 80 81 82 83 84 85 86, on right: 75
expression (125)
    on left: 87 88, on right: 6 18 73 88 246 250 251 252 255 257 259
    261 266
constant_expression (126)
    on left: 89, on right: 146 147 157 225 227 235
declaration (127)
    on left: 90 91 92, on right: 243 260 261 271 274 275
declaration_specifiers (128)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 90 91 93 95
    97 99 101 184 185 186 272 273
init_declarator_list (129)
    on left: 103 104, on right: 91 104
hack (130)
    on left: 105 106, on right: 107
init_declarator (131)
    on left: 107 108, on right: 103 104
storage_class_specifier (132)
    on left: 109 110 111 112 113 114, on right: 93 94
type_specifier (133)
    on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128
    129, on right: 95 96 140 141
struct_or_union_specifier (134)
    on left: 130 131 132, on right: 128
struct_or_union (135)
    on left: 133 134, on right: 130 131 132
struct_declaration_list (136)
    on left: 135 136, on right: 130 131 136
struct_declaration (137)
    on left: 137 138 139, on right: 135 136
specifier_qualifier_list (138)
    on left: 140 141 142 143, on right: 137 138 140 142 189 190
struct_declarator_list (139)
    on left: 144 145, on right: 138 145
struct_declarator (140)
    on left: 146 147 148, on right: 144 145
atomic_type_specifier (141)
    on left: 149, on right: 127
type_qualifier (142)
    on left: 150 151 152 153, on right: 97 98 142 143 178 179
function_specifier (143)
    on left: 154 155, on right: 99 100
alignment_specifier (144)
    on left: 156 157, on right: 101 102
declarator (145)
    on left: 158 159, on right: 107 108 147 148 161 184 272 273
direct_declarator (146)
    on left: 160 161 162 163 164 165 166 167 168 169 170 171 172 173,
    on right: 158 159 162 163 164 165 166 167 168 169 170 171 172 173
pointer (147)
    on left: 174 175 176 177, on right: 158 174 176 191 192
type_qualifier_list (148)
    on left: 178 179, on right: 164 166 167 168 169 174 175 179 197
    199 200 201 205 207 208 209
parameter_type_list (149)
    on left: 180 181, on right: 171 212 214
parameter_list (150)
    on left: 182 183, on right: 180 181 183
parameter_declaration (151)
    on left: 184 185 186, on right: 182 183
identifier_list (152)
    on left: 187 188, on right: 173 188
type_name (153)
    on left: 189 190, on right: 15 25 26 34 35 43 149 156
abstract_declarator (154)
    on left: 191 192 193, on right: 185 189 194
direct_abstract_declarator (155)
    on left: 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    208 209 210 211 212 213 214, on right: 191 193 203 204 205 206
    207 208 209 210 213 214
initializer (156)
    on left: 215 216 217, on right: 218 219 220 221
initializer_list (157)
    on left: 218 219 220 221, on right: 25 26 215 216 220 221
designation (158)
    on left: 222, on right: 218 220
designator_list (159)
    on left: 223 224, on right: 222 224
designator (160)
    on left: 225 226, on right: 223 224
static_assert_declaration (161)
    on left: 227, on right: 92 139
statement (162)
    on left: 228 229 230 231 232 233, on right: 234 235 236 244 250
    251 252 255 257 258 259 260 261
labeled_statement (163)
    on left: 234 235 236, on right: 228
M (164)
    on left: 237, on right: 240 255 257
compound_statement (165)
    on left: 238 240, on right: 229 270
$@1 (166)
    on left: 239, on right: 240
block_item_list (167)
    on left: 241 242, on right: 240 242
block_item (168)
    on left: 243 244, on right: 241 242
expression_statement (169)
    on left: 245 246, on right: 230 258 259 260 261
if (170)
    on left: 247, on right: 250 251
else (171)
    on left: 248, on right: 250
selection_statement (172)
    on left: 250 251 252, on right: 231
$@2 (173)
    on left: 249, on right: 250
P (174)
    on left: 253, on right: 258 259 260 261
iteration_statement (175)
    on left: 255 257 258 259 260 261, on right: 232
$@3 (176)
    on left: 254, on right: 255
$@4 (177)
    on left: 256, on right: 257
jump_statement (178)
    on left: 262 263 264 265 266, on right: 233
base (179)
    on left: 267, on right: 0
translation_unit (180)
    on left: 268 269, on right: 267 269
external_declaration (181)
    on left: 270 271, on right: 268 269
function_definition (182)
    on left: 272 273, on right: 270
declaration_list (183)
    on left: 274 275, on right: 272 275


State 0

    0 $accept: . base $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ALIGNAS        shift, and go to state 25
    ATOMIC         shift, and go to state 26
    NORETURN       shift, and go to state 27
    STATIC_ASSERT  shift, and go to state 28
    THREAD_LOCAL   shift, and go to state 29

    declaration                go to state 30
    declaration_specifiers     go to state 31
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39
    static_assert_declaration  go to state 40
    base                       go to state 41
    translation_unit           go to state 42
    external_declaration       go to state 43
    function_definition        go to state 44


State 1

  129 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 129 (type_specifier)


State 2

  109 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 109 (storage_class_specifier)


State 3

  110 storage_class_specifier: EXTERN .

    $default  reduce using rule 110 (storage_class_specifier)


State 4

  111 storage_class_specifier: STATIC .

    $default  reduce using rule 111 (storage_class_specifier)


State 5

  113 storage_class_specifier: AUTO .

    $default  reduce using rule 113 (storage_class_specifier)


State 6

  114 storage_class_specifier: REGISTER .

    $default  reduce using rule 114 (storage_class_specifier)


State 7

  154 function_specifier: INLINE .

    $default  reduce using rule 154 (function_specifier)


State 8

  150 type_qualifier: CONST .

    $default  reduce using rule 150 (type_qualifier)


State 9

  151 type_qualifier: RESTRICT .

    $default  reduce using rule 151 (type_qualifier)


State 10

  152 type_qualifier: VOLATILE .

    $default  reduce using rule 152 (type_qualifier)


State 11

  124 type_specifier: BOOL .

    $default  reduce using rule 124 (type_specifier)


State 12

  116 type_specifier: CHAR .

    $default  reduce using rule 116 (type_specifier)


State 13

  117 type_specifier: SHORT .

    $default  reduce using rule 117 (type_specifier)


State 14

  118 type_specifier: INT .

    $default  reduce using rule 118 (type_specifier)


State 15

  119 type_specifier: LONG .

    $default  reduce using rule 119 (type_specifier)


State 16

  122 type_specifier: SIGNED .

    $default  reduce using rule 122 (type_specifier)


State 17

  123 type_specifier: UNSIGNED .

    $default  reduce using rule 123 (type_specifier)


State 18

  120 type_specifier: FLOAT .

    $default  reduce using rule 120 (type_specifier)


State 19

  121 type_specifier: DOUBLE .

    $default  reduce using rule 121 (type_specifier)


State 20

  115 type_specifier: VOID .

    $default  reduce using rule 115 (type_specifier)


State 21

  125 type_specifier: COMPLEX .

    $default  reduce using rule 125 (type_specifier)


State 22

  126 type_specifier: IMAGINARY .

    $default  reduce using rule 126 (type_specifier)


State 23

  133 struct_or_union: STRUCT .

    $default  reduce using rule 133 (struct_or_union)


State 24

  134 struct_or_union: UNION .

    $default  reduce using rule 134 (struct_or_union)


State 25

  156 alignment_specifier: ALIGNAS . '(' type_name ')'
  157                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 45


State 26

  149 atomic_type_specifier: ATOMIC . '(' type_name ')'
  153 type_qualifier: ATOMIC .

    '('  shift, and go to state 46

    '('       [reduce using rule 153 (type_qualifier)]
    $default  reduce using rule 153 (type_qualifier)


State 27

  155 function_specifier: NORETURN .

    $default  reduce using rule 155 (function_specifier)


State 28

  227 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 47


State 29

  112 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 112 (storage_class_specifier)


State 30

  271 external_declaration: declaration .

    $default  reduce using rule 271 (external_declaration)


State 31

   90 declaration: declaration_specifiers . ';'
   91            | declaration_specifiers . init_declarator_list ';'
  272 function_definition: declaration_specifiers . declarator declaration_list
  273                    | declaration_specifiers . declarator

    IDENTIFIER  shift, and go to state 48
    '('         shift, and go to state 49
    '*'         shift, and go to state 50
    ';'         shift, and go to state 51

    init_declarator_list  go to state 52
    init_declarator       go to state 53
    declarator            go to state 54
    direct_declarator     go to state 55
    pointer               go to state 56


State 32

   93 declaration_specifiers: storage_class_specifier . declaration_specifiers
   94                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 57
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 33

   95 declaration_specifiers: type_specifier . declaration_specifiers
   96                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 34

  128 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 128 (type_specifier)


State 35

  130 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  131                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  132                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 59
    '{'         shift, and go to state 60


State 36

  127 type_specifier: atomic_type_specifier .

    $default  reduce using rule 127 (type_specifier)


State 37

   97 declaration_specifiers: type_qualifier . declaration_specifiers
   98                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 38

   99 declaration_specifiers: function_specifier . declaration_specifiers
  100                       | function_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 100 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 39

  101 declaration_specifiers: alignment_specifier . declaration_specifiers
  102                       | alignment_specifier .
